workloads/element-web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: element-web
  namespace: matrix
  labels:
    app.kubernetes.io/name: element-web
    app.kubernetes.io/instance: element-web
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/name: element-web
    app.kubernetes.io/instance: element-web
  type: ClusterIP
