workloads/element-web/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: element-web
  namespace: default
spec:
  hostnames:
    - element.john2143.com
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: shared-gateway
      namespace: default
      sectionName: element-john2143-https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: keda-add-ons-http-interceptor-proxy
          namespace: keda
          port: 8080
